0.59.1.0/_sources/Reference/NodeReference/GafferDispatch/Wedge.md.txt
Wedge
=====

Causes upstream nodes to be dispatched multiple times in a range
of Contexts, each time with a different value for a specified variable.
This variable should be referenced in upstream expressions to apply
variation to the tasks being performed. For instance, it could be
used to drive a shader parameter to perform a series of "wedges" to
demonstrate the results of a range of possible parameter values.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

preTasks
--------

Input connections to upstream nodes which must be
executed before this node.

postTasks
---------

Input connections to nodes which must be
executed after this node, but which don't
need to be executed before downstream nodes.

task
----

Output connections to downstream nodes which must
not be executed until after this node.

dispatcher
----------

Container for custom plugs which dispatchers use to
control their behaviour.

dispatcher.batchSize
--------------------

Maximum number of frames to batch together when dispatching tasks.

dispatcher.immediate
--------------------

Causes this node to be executed immediately upon dispatch,
rather than have its execution be scheduled normally by
the dispatcher. For instance, when using the LocalDispatcher,
the node will be executed immediately in the dispatching process
and not in a background process as usual.

When a node is made immediate, all upstream nodes are automatically
considered to be immediate too, regardless of their settings.

variable
--------

The name of the Context Variable defined by the wedge.
This should be used in upstream expressions to apply the
wedged value to specific nodes.

indexVariable
-------------

The name of an index Context Variable defined by the wedge.
This is assigned values starting at 0 and incrementing for
each new value - for instance a wedged float range might
assign variable values of `0.25, 0,5, 0.75` or `0.1, 0,2, 0.3`
but the corresponding index variable would take on values of
`0, 1, 2` in both cases.

The index variable is particularly useful for generating
unique filenames when using a float range to perform
wedged renders.

mode
----

The method used to define the range of values used by
the wedge. It is possible to define numeric or color
ranges, and also to specify explicit lists of numbers or
strings.

floatMin
--------

The smallest value of the wedge range when the
mode is set to "Float Range". Has no effect in
other modes.

floatMax
--------

The largest allowable value of the wedge range
when the mode is set to "Float Range". Has no
effect in other modes.

floatSteps
----------

The number of steps in the value range
defined when in "Float Range" mode. The
steps are distributed evenly between the
min and max values. Has no effect in
other modes.

intMin
------

The smallest value of the wedge range when the
mode is set to "Int Range". Has no effect in
other modes.

intMax
------

The largest allowable value of the wedge range
when the mode is set to "Int Range". Has no
effect in other modes.

intStep
-------

The step between successive values when the
mode is set to "Int Range". Values are
generated by adding this step to the minimum
value until the maximum value is exceeded.
Note that if (max - min) is not exactly divisible
by the step then the maximum value may not
be used at all. Has no effect in other modes.

ramp
----

The range of colours used when the mode
is set to "Colour Range". Has no effect in
other modes.

colorSteps
----------

The number of steps in the wedge range
defined when in "Colour Range" mode. The
steps are distributed evenly from the start
to the end of the ramp. Has no effect in
other modes.

floats
------

The list of values used when in "Float List"
mode. Has no effect in other modes.

ints
----

The list of values used when in "Int List"
mode. Has no effect in other modes.

strings
-------

The list of values used when in "String List"
mode. Has no effect in other modes.